force-app/main/default/objects/CA_ImoveisConta__c/CA_ImoveisConta__c.object-meta.xml
<CustomObject>
    <label>Imóveis da Conta</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Imoveis da Conta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imóveis das Contas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>