force-app/main/default/objects/CA_ImoveisConta__c/fields/CA_Classificado__c.field-meta.xml
<CustomField>
    <fullName>CA_Classificado__c</fullName>
    <label>Classificado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietário</fullName>
            </value>
            <value>
                <fullName>Inquilino</fullName>
            </value>
            <value>
                <fullName>Fiador</fullName>
            </value>
            <value>
                <fullName>Representante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>