force-app/main/default/objects/CA_ImoveisConta__c/fields/CA_Contas__c.field-meta.xml
<CustomField>
    <fullName>CA_Contas__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Imoveis das Contas</relationshipLabel>
    <relationshipName>Imoveis_das_Contas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>