force-app/main/default/objects/CA_ImoveisConta__c/fields/CA_DataFim__c.field-meta.xml
<CustomField>
    <fullName>CA_DataFim__c</fullName>
    <label>Data Fim</label>
    <type>Date</type>
</CustomField>