force-app/main/default/objects/CA_ImoveisConta__c/fields/CA_Imovel__c.field-meta.xml
<CustomField>
    <fullName>CA_Imovel__c</fullName>
    <label>Imóvel</label>
    <referenceTo>CA_Imovel__c</referenceTo>
    <relationshipLabel>Conta dos Imoveis</relationshipLabel>
    <relationshipName>ContaDosImoveis</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>