force-app/main/default/objects/CA_ImoveisConta__c/fields/CA_ShareProprietario__c.field-meta.xml
<CustomField>
    <fullName>CA_ShareProprietario__c</fullName>
    <label>Share do Proprietário</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>