force-app/main/default/objects/CA_ImoveisConta__c/fields/CA_Status__c.field-meta.xml
<CustomField>
    <fullName>CA_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>