force-app/main/default/objects/CA_ImoveisConta__c/fields/CA_TipoRelacionamento__c.field-meta.xml
<CustomField>
    <fullName>CA_TipoRelacionamento__c</fullName>
    <label>Tipo relacionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietário</fullName>
            </value>
            <value>
                <fullName>Inquilino</fullName>
            </value>
            <value>
                <fullName>Fiador</fullName>
            </value>
            <value>
                <fullName>Representante</fullName>
            </value>
            <value>
                <fullName>Procurador</fullName>
            </value>
            <value>
                <fullName>Síndico</fullName>
            </value>
            <value>
                <fullName>Condômino</fullName>
            </value>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Locatário Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>