force-app/main/default/objects/CA_ImoveisConta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CA_Contas__c</columns>
    <columns>CA_Imovel__c</columns>
    <columns>CA_TipoRelacionamento__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>